test/functional/resources/ingress.yaml
# Copyright Contributors to the Open Cluster Management project

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: clusterlifecycle-state-metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: clusterlifecycle-state-metrics
  namespace: multicluster-engine
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /clusterlifecycle-state-metrics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: clusterlifecycle-state-metrics
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: clusterlifecycle-state-metrics-https
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: clusterlifecycle-state-metrics-https
  namespace: multicluster-engine
spec:
  ingressClassName: nginx
  rules:
  - host: metrics.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterlifecycle-state-metrics
            port:
              number: 8443
  - host: telemetry.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterlifecycle-state-metrics
            port:
              number: 8444
