test/functional/resources/namespace_ocm.yaml
# Copyright Contributors to the Open Cluster Management project

apiVersion: v1
kind: Namespace
metadata:
  name: multicluster-engine
