test/functional/resources/namespace_osm.yaml
# Copyright Contributors to the Open Cluster Management project

apiVersion: v1
kind: Namespace
metadata:
  name: openshift-monitoring
